# maskflow

./: .dockerignore  .env.example  .gitattributes  .gitignore  README.md  pyproject.toml
.codex/environments/: environment.toml
configs/: default.yaml
configs/examples/: deterministic.yaml  docker.yaml  full.yaml  nlp.yaml  partial.yaml  preserve_format.yaml  random.yaml  redact.yaml
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
maskflow/api/: __init__.py  app.py  dependencies.py  schemas.py
maskflow/audit/: json_export.py  models.py
maskflow/cli/: app.py  formatting.py  help.py  i18n.py
maskflow/core/: batch.py  bundle.py  directory.py  engine.py  factory.py  interfaces.py  pipeline.py  registry.py  streaming.py  tasks.py  types.py
maskflow/detectors/: bank_account.py  base.py  bik.py  document_code.py  email.py  guid.py  inn.py  ip_address.py  kpp.py  nlp.py  ogrn.py  phone.py  regex_base.py  snils.py  url.py
maskflow/formats/: csv.py  docx.py  json.py  log.py  sql.py  text.py  xlsx.py  xml.py
maskflow/maskers/: deterministic.py  hmac_masker.py  partial_masker.py  preserve_format_masker.py  redact_masker.py
maskflow/nlp/: __init__.py  download.py  factory.py  labels.py  models.py  paths.py  pipeline.py  resolver.py  status.py
maskflow/plugins/: builtin.py  loader.py  registry.py  spec.py  validation.py
maskflow/reports/: json_report.py  models.py
maskflow/rules/: field_engine.py  loader.py  models.py
maskflow/runtime/: __init__.py  paths.py  permissions.py  settings.py
maskflow/security/: regex_policy.py
maskflow/services/: demasking.py  file_jobs.py  file_masking.py  text_masking.py
maskflow/storage/: encrypted_mapping.py  entity_cache.py
maskflow/utils/: atomic.py  encoding.py  filelock.py  logging.py  timeout.py
maskflow/web_htmx/: config_summary.py  routes.py
plugins/: README.md
scripts/: bootstrap.ps1  bootstrap.sh  check.ps1  check.sh  dev.ps1  docker.ps1
tests/: conftest.py
tests/integration/: test_cli.py  test_csv_processor.py  test_docx_processor.py  test_engine.py  test_entity_cache.py  test_external_plugins.py  test_factory_config.py  test_field_rules.py  test_file_masking_service.py  (+5 more)
(+57 files in other folders)
