[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maskflow"
version = "0.1.0"
description = "Offline enterprise data masking service"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "typer>=0.12.0",
    "click>=8.1.0,<8.2.0",
    "rich>=13.7.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "PyYAML>=6.0.1",
    "regex>=2024.5.15",
    "structlog>=24.1.0",
    "faker>=25.2.0",
    "rapidfuzz>=3.9.0",
    "aiofiles>=23.2.1",
    "lxml>=5.2.1",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.2",
    "cryptography>=42.0.0",
    "fastapi>=0.111.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]

dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "ruff>=0.4.4",
    "types-PyYAML",
    "types-regex",
]

api = []

download = ["huggingface-hub>=0.25.0"]

nlp = [
    "gliner>=0.2.13",
    "spacy>=3.7.0",
    "natasha>=1.6.0",
    "pymorphy3>=2.0.1",
]

qwen = [
    "transformers>=4.45.0",
    "accelerate>=0.33.0",
    "torch>=2.4.0",
    "sentencepiece>=0.2.0",
]

[project.scripts]
maskflow = "maskflow.cli.app:app"

[tool.ruff]
line-length = 100
target-version = "py312"

exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"

strict = true

warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true

disallow_untyped_defs = true
disallow_any_generics = true

no_implicit_optional = true

exclude = [".venv", "build", "dist"]

[[tool.mypy.overrides]]
module = ["fastapi", "fastapi.*", "uvicorn"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["maskflow.api.*", "maskflow.web_htmx.*"]
disallow_untyped_decorators = false

[tool.setuptools.packages.find]
include = ["maskflow*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
maskflow = [
    "web_htmx/templates/*.html",
    "web_htmx/static/*",
]
